--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,3 +25,6 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   generate: true
+  assets:
+    - assets/no-time-to-die.jpeg
+    - assets/no-time-to-die_background.png
