--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,4 +28,4 @@ flutter:
   generate: true
   assets:
     - assets/no-time-to-die.jpeg
-    - assets/no-time-to-die_background.png
+    - assets/no-time-to-die_background.jpeg
