--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,3 +29,7 @@ flutter:
   assets:
     - assets/no-time-to-die.jpeg
     - assets/no-time-to-die_background.jpeg
+    - assets/dune.jpeg
+    - assets/dune_background.jpeg
+    - assets/godzilla.jpeg
+    - assets/godzilla_background.jpeg
